# systeminfo_component

./: LICENSE  Makefile.am  README.md  configure.ac  systeminfo.cpp  systeminfo.h  systeminfo.service  systeminfo_0.1.bb
